--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -1,20 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC2.CommonPathInternal=null|null|null|null
-ADC2.ContinuousConvMode=DISABLE
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,Resolution,ContinuousConvMode,CommonPathInternal
-ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.Resolution=ADC_RESOLUTION_6B
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
-DAC1.IPParameters=DAC_Channel-DAC_OUT2
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01
+FREERTOS.Queues01=ASCII_Char_Queue,16,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -23,46 +13,42 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
-Mcu.IP0=ADC2
-Mcu.IP1=DAC1
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM4
-Mcu.IP8=TIM17
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM4
+Mcu.IP5=TIM17
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PB0
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA13 (JTMS-SWDIO)
-Mcu.Pin18=PA14 (JTCK-SWCLK)
-Mcu.Pin19=PB3 (JTDO-TRACESWO)
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA13 (JTMS-SWDIO)
+Mcu.Pin17=PA14 (JTCK-SWCLK)
+Mcu.Pin18=PB3 (JTDO-TRACESWO)
+Mcu.Pin19=PB5
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PB5
-Mcu.Pin21=PB6
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim2
-Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_tim2
+Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
-Mcu.Pin6=PA0
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=26
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -88,11 +74,8 @@ NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:t
 NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM2_IRQn
 NVIC.TimeBaseIP=TIM2
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
-PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=Potentiometer
-PA0.Locked=true
-PA0.Signal=ADCx_IN5
 PA1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=Button_1
 PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -129,22 +112,19 @@ PA4.GPIO_Label=Button_2
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=DAC2-LED-D1
+PA5.GPIO_Label=LED_D1
 PA5.Locked=true
-PA5.Signal=COMP_DAC12_group
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA6.GPIO_Label=LED-D2
 PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PA7.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=LED-D3
-PA7.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
-PA7.GPIO_PuPd=GPIO_NOPULL
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PA7.Mode=PWM Generation1 CH1N
-PA7.Signal=TIM1_CH1N
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LED_D3
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=SevenSeg_CLK
 PA8.Locked=true
@@ -165,7 +145,7 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_FM6,GPIO_PuPd,GPIO_Label
 PB6.GPIO_FM6=SYSCFG_FASTMODEPLUS_PB6
-PB6.GPIO_Label=LED_D4_PWM
+PB6.GPIO_Label=LED_D4
 PB6.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -211,8 +191,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=ECEN-361-STM32-Lab-06-ADC-PWM-Solution.ioc
-ProjectManager.ProjectName=ECEN-361-STM32-Lab-06-ADC-PWM-Solution
+ProjectManager.ProjectFileName=ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+ProjectManager.ProjectName=ECEN-361-STM32-Lab-07-Queues-Solution
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -221,7 +201,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -277,10 +257,6 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.ADCx_IN2.0=ADC1_IN2
 SH.ADCx_IN2.ConfNb=1
-SH.ADCx_IN5.0=ADC2_IN5,IN5-Single-Ended
-SH.ADCx_IN5.ConfNb=1
-SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
-SH.COMP_DAC12_group.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
@@ -289,11 +265,6 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
-TIM1.IPParameters=Prescaler,Channel-PWM Generation1 CH1N,Pulse-PWM Generation1 CH1N,OCNPolarity_1
-TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
-TIM1.Prescaler=8
-TIM1.Pulse-PWM\ Generation1\ CH1N=16000
 TIM17.IPParameters=Prescaler,Period
 TIM17.Period=100
 TIM17.Prescaler=800-1
