--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -2,10 +2,12 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Timers01,BinarySemaphores01
 FREERTOS.Queues01=ASCII_Char_Queue,16,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -18,9 +20,10 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM4
-Mcu.IP5=TIM17
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP5=TIM7
+Mcu.IP6=TIM17
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -40,7 +43,8 @@ Mcu.Pin20=PB6
 Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin22=VP_SYS_VS_tim2
 Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
@@ -48,7 +52,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -72,6 +76,7 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM2_IRQn
 NVIC.TimeBaseIP=TIM2
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -201,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -275,6 +280,9 @@ TIM4.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM4.Period=65535
 TIM4.Prescaler=8
 TIM4.Pulse-PWM\ Generation1\ CH1=16000
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=1000
+TIM7.Prescaler=8000 - 1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -285,6 +293,8 @@ VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 rtos.0.ip=FREERTOS
