added the random symbol timer

--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -5,9 +5,9 @@ CAD.provider=
 FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Timers01,BinarySemaphores01
-FREERTOS.Queues01=ASCII_Char_Queue,16,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
+FREERTOS.Queues01=ASCII_Char_Queue,50,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL
+FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerOnce,Default,NULL,Dynamic,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -206,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
