not quite running safety save

--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -2,12 +2,12 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL
+FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL;Issue_Symbols_Semaphore,Dynamic,NULL;Issue_lowercases_Semaphore,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Timers01,BinarySemaphores01
 FREERTOS.Queues01=ASCII_Char_Queue,50,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerOnce,Default,NULL,Dynamic,NULL
+FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL;lowercaseTimer,Add_Random_lowercase_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -60,6 +60,7 @@ MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -112,8 +113,9 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PA4.GPIO_Label=Button_2
+PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
@@ -138,10 +140,11 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=SevenSeg_DATA
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=Button-3
+PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB0.GPIO_Label=Button_3
+PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB0.Locked=true
-PB0.Signal=GPIO_Input
+PB0.Signal=GPXTI0
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PB5.GPIOParameters=GPIO_Label
@@ -262,6 +265,8 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.ADCx_IN2.0=ADC1_IN2
 SH.ADCx_IN2.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
