--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -2,12 +2,12 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL;Issue_Symbols_Semaphore,Dynamic,NULL;Issue_lowercases_Semaphore,Dynamic,NULL;ProcessButton,Dynamic,NULL
+FREERTOS.BinarySemaphores01=ProcessSemaphore,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Timers01,BinarySemaphores01
 FREERTOS.Queues01=ASCII_Char_Queue,50,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerPeriodic,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL;lowercaseTimer,Add_Random_lowercase_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL
+FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerOnce,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerPeriodic,Default,NULL,Static,RandomSymbolTimerControlBlock;lowercaseTimer,Add_Random_lowercase_to_Queue,osTimerPeriodic,Default,NULL,Static,lowercaseTimerControlBlock
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -56,8 +56,8 @@ Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.9.1
+MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
