--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -56,8 +56,8 @@ Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.9.1
-MxDb.Version=DB.6.0.91
+MxCube.Version=6.9.2
+MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -118,8 +118,10 @@ PA4.GPIO_Label=Button_2
 PA4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=LED_D1
+PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
