--- a/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
+++ b/ECEN-361-STM32-Lab-07-Queues-Solution.ioc
@@ -7,7 +7,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Queues01,Timers01,BinarySemaphores01
 FREERTOS.Queues01=ASCII_Char_Queue,50,uint8_t,0,Static,ASCII_Char_QueueBuffer,ASCII_Char_QueueControlBlock
 FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.Timers01=ProcessQueueTimer,PQTimer_CB,osTimerOnce,Default,NULL,Dynamic,NULL;RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL;lowercaseTimer,Add_Random_lowercase_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL
+FREERTOS.Timers01=RandomSymbolTimer,Add_Random_Symbols_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL;lowercaseTimer,Add_Random_lowercase_to_Queue,osTimerPeriodic,Default,NULL,Dynamic,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=50000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
